--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,17 @@
 {
     "version": 2,
-    "rewrites": [
+    "builds": [
       {
-        "source": "/(.*)",
-        "destination": "/api"
+        "src": "./index.js",
+        "use": "@vercel/node"
       }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
     ]
+
   }
   
