--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGO_URL=mongodb+srv://suporte1725:<fervale0107>@cluster0.vbg7j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://suporte1725:fervale0107@cluster0.vbg7j.mongodb.net/correiodenatal?retryWrites=true&w=majority&appName=Cluster0
+
 
 
