--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_URL=mongodb+srv://suporte1725:fervale0107@cluster0.vbg7j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-PORT=3000
+MONGO_URL=mongodb+srv://fernando:suporte1725@cluster0.vbg7j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
 
 
 
